﻿v2.1.5
- Added cakeboxes sort options
- Added discs counter for cakeboxes
- Added command to rebuild discs counters
- Code Cleanup
-------------------------------------------------------------
v2.1.4
- Added last import/export path used to session storage
- Fixed bug in scaning empty path (resulting in the exception)
- Fixed bug in save new disc (wrong cakebox name on the result msg)
- Tiny UI Update
-------------------------------------------------------------
v2.1.3 (Codename: GA)
- Updated to SQLite 3.7.12.1
- Replaced almost all icons to Fugue library *
- Replaced Check/Uncheck All button in the mass move form with an actual checkbox
- Added filter shortcut in the file list context menu
- Added sort discs options to the local session storage
- Fixed bug with invisible dialog forms when always on top is checked
- Cleaned up code (i discovered C# extensions)
* The application icon is still from the famfam silk library
-------------------------------------------------------------
v2.1.2
- All icons except the app's are now from the defaulticon library
- Added buttons and listboxes help/info tooltips
- Added Metacritic.com and TV.com to the search engines in file list menu
- Added shortcuts for various actions
- Changed EOLfrom Win to UNIX format (~3% smaller backup and db size)
- Cleaned up code
-------------------------------------------------------------
v2.1.1 (5/5/2012)
- Updated reset window to work with all component saved settings
- Moved the changelog from the resources to dedicated txt file
- Fixed bug not saving all settings localy
- Cleaned up code
- Completed code documentation
-------------------------------------------------------------
v2.1.0 (4/5/2012)
- Fixed bug in reset window procedure updating location before size
- Fixed bug updating status bar twice when editing disc
- Improved scan process performance (a lot)
- Added auto suggest/append in the scan path combobox
- Added ability to drop all tables/data to start fresh