@@ -71,8 +71,7 @@ namespace Cavebox.Lib
 			ExecuteNonQuery(
 				"CREATE TABLE IF NOT EXISTS cakebox ("
 				+ " id INTEGER PRIMARY KEY, "
-				+ " label TEXT NOT NULL, "
-				+ " discsno INTEGER DEFAULT 0); "
+				+ " label TEXT NOT NULL); "
 				+ "CREATE TABLE IF NOT EXISTS disc ("
 				+ " id INTEGER PRIMARY KEY, "
 				+ " cid INTEGER DEFAULT 0, "
@@ -125,30 +124,6 @@ namespace Cavebox.Lib
 				Console.WriteLine(e.Message);
 			}
 		}
-
-		/// <summary>
-		/// Rebuild disc counters
-		/// </summary>
-		public static void RebuildDiscCounters()
-		{
-			try
-			{
-				List<string> cases = new List<string>();
-				SQLiteCommand c = CreateCommand("SELECT cid, COUNT(*) FROM disc WHERE 1 GROUP BY cid");
-				SQLiteDataReader r = c.ExecuteReader();
-				while (r.Read())
-				{
-					cases.Add(String.Format("WHEN {0} THEN {1}", r.GetInt32(0), r.GetInt32(1)));
-				}
-				r.Close();
-				c.Dispose();
-				ExecuteNonQuery(string.Format("UPDATE cakebox SET discsno = CASE id {0} ELSE discsno END", string.Join(" ", cases)));
-			}
-			catch(SQLiteException e)
-			{
-				Console.WriteLine(e.Message);
-			}
-		}
 		
 		/// <summary>
 		/// Custom ToLower Sqlite Command for proper search LIKE results
@@ -172,35 +147,20 @@ namespace Cavebox.Lib
 			List<Identity> list = new List<Identity>();
 			try
 			{
-				string orderClause = null;
-				switch(orderBy)
-				{
-						case 0: orderClause = "c.id"; 					break;
-						case 1: orderClause = "c.label COLLATE NOCASE"; 	break;
-						case 2: orderClause = "c.discsno";			 	break;
-				}
-				
-				string sql = "SELECT c.id, c.label, c.discsno FROM cakebox AS c";
+				string sql = "SELECT c.id, c.label FROM cakebox AS c";
 				sql += (filter != null) ? " LEFT JOIN disc AS d on d.cid = c.id WHERE ToLower(d.files) LIKE '" + filter + "' GROUP BY c.id" : "";
-				sql += " ORDER BY " + orderClause + " " + ((orderWay == 0) ? " ASC" : " DESC");
-
+				sql += " ORDER BY " + ((orderBy == 0) ? "c.id" : "c.label COLLATE NOCASE") + " " + ((orderWay == 0) ? " ASC" : " DESC");
+	
 				SQLiteCommand c = CreateCommand(sql);
 				SQLiteDataReader r = c.ExecuteReader();
 				while (r.Read())
 				{
 					string label = r.GetString(1);
 					int id = r.GetInt32(0);
-					
 					if(orderBy == 0)
 					{
 						label = "#" + id + " - " + label;
-					}
-					if(orderBy == 2)
-					{
-						label += String.Format(" ({0:n0})", r.GetInt32(2));
-					}
-					
-					
+					}			
 					list.Add(new Identity(id, label));
 				}
 				r.Close();
