@@ -195,9 +195,6 @@
   <data name="_unknownDate" xml:space="preserve">
     <value>∞</value>
   </data>
-  <data name="_rebuildingFileCountersCompleted" xml:space="preserve">
-    <value>Rebuilding files counters took {0:0.000} seconds</value>
-  </data>
   <data name="_vacuumTables" xml:space="preserve">
     <value>Vacuum database took {0:0.000} seconds</value>
   </data>
